--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,10 +12,10 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.0.0-beta.3</Version>
+    <Version>1.0.0</Version>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.80</FileVersion>
-    <InformationalVersion>1.0.0-beta.3</InformationalVersion>
+    <FileVersion>1.0.0.99</FileVersion>
+    <InformationalVersion>1.0.0</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A comprehensive mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
