feat: Beta version 1.1.0-beta.1 with in-app updater and translation upgrades / 发布1.1.0-beta.1测试版本，新增应用内更新与翻译升级
- Update Check: Configurable stable/beta update channels with background checks and installer flow / 更新系统：稳定/测试更新通道选择，支持后台检查与一键更新安装

- Detect manual translation installs, track release timestamps, and surface update availability in UI / 检测手动翻译安装，跟踪版本时间戳，并在界面提示可用更新

- Revamp download pipeline with IDM-style chunking plus throttled rate-limit warnings / 重构下载流程，采用IDM风格分块下载并限制提醒

- Expand UI: update banner, settings update button, log filters/export, enlarged layouts, refreshed strings / 扩展界面：更新提示条、设置检查按钮、日志筛选导出、更大布局与文案更新

--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,14 +12,14 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.0.1</Version>
-    <AssemblyVersion>1.0.1.10</AssemblyVersion>
-    <FileVersion>1.0.1.10</FileVersion>
-    <InformationalVersion>1.0.1</InformationalVersion>
+    <Version>1.1.0-beta.1</Version>
+    <AssemblyVersion>1.1.0.24</AssemblyVersion>
+    <FileVersion>1.1.0.24</FileVersion>
+    <InformationalVersion>1.1.0-beta.1</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A comprehensive mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
-    <Company>DMR.gg</Company>
+    <Company>GHPC.DMR.gg</Company>
   </PropertyGroup>
 
   <ItemGroup>
@@ -46,6 +46,14 @@
 
   <ItemGroup>
     <Resource Include="app.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\Strings.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
