--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,10 +12,10 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.1.0-beta.1</Version>
-    <AssemblyVersion>1.1.0.24</AssemblyVersion>
-    <FileVersion>1.1.0.24</FileVersion>
-    <InformationalVersion>1.1.0-beta.1</InformationalVersion>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.1.0.99</AssemblyVersion>
+    <FileVersion>1.1.0.99</FileVersion>
+    <InformationalVersion>1.1.0</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A comprehensive mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
