feat: Beta version 1.1.1-beta.1 with BepInEx detection and UI enhancements / 发布1.1.1-beta.1测试版本，新增BepInEx检测与界面增强
- Add BepInEx detection logic to prevent conflicts with existing installations / 新增BepInEx检测逻辑，防止与现有安装冲突

- Introduce BooleanAndToVisibilityConverter for complex UI binding scenarios / 引入布尔值AND转可见性转换器，支持复杂UI绑定场景

- Update version to 1.1.1-beta.1 with WebView2 dependency integration / 更新版本至1.1.1-beta.1，集成WebView2依赖

- Enhance string resources and localization infrastructure / 增强字符串资源与本地化基础设施

- Improve network service stability and error handling / 改进网络服务稳定性与错误处理

- Refine translation manager and update service reliability / 优化翻译管理器与更新服务可靠性

--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,23 +12,23 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0.99</AssemblyVersion>
-    <FileVersion>1.1.0.99</FileVersion>
-    <InformationalVersion>1.1.0</InformationalVersion>
+    <Version>1.1.1-beta.1</Version>
+    <AssemblyVersion>1.1.1.32</AssemblyVersion>
+    <FileVersion>1.1.1.32</FileVersion>
+    <InformationalVersion>1.1.1-beta.1</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
-    <Description>A comprehensive mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
+    <Description>A mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
     <Company>GHPC.DMR.gg</Company>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
-    <PackageReference Include="Markdig" Version="0.41.3" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3537.50" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.IO.Compression.ZipFile" Version="4.3.0" />
   </ItemGroup>
