feat: Release version 1.1.1 with Steam auto-discovery and translation UX upgrades / 发布1.1.1正式版，新增Steam自动搜寻与翻译体验升级   - Provide SteamGameFinderService and wizard triggers for automatic GHPC path discovery with Steam-only warning flow / 引入SteamGameFinderService搭配向导自动搜寻GHPC路径并提示非Steam版本   - Refresh translation update UX with live progress, UTC manifest timestamps, and updated control styling / 优化翻译更新体验，加入实时进度、UTC清单时间与新版按钮样式   - Lower multi-threaded download threshold and expand localization strings for new automation messages / 下调多线程下载阈值并补充自动化相关本地化字符串   - Promote build to stable v1.1.1 with revised assembly metadata and resource tweaks / 发布稳定版v1.1.1，更新程序集元数据与资源文本

--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,10 +12,10 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.1.1-beta.1</Version>
-    <AssemblyVersion>1.1.1.32</AssemblyVersion>
-    <FileVersion>1.1.1.32</FileVersion>
-    <InformationalVersion>1.1.1-beta.1</InformationalVersion>
+    <Version>1.1.1</Version>
+    <AssemblyVersion>1.1.1.86</AssemblyVersion>
+    <FileVersion>1.1.1.86</FileVersion>
+    <InformationalVersion>1.1.1</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
