--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,10 +12,10 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.1.2-beta.1</Version>
-    <AssemblyVersion>1.1.2.23</AssemblyVersion>
-    <FileVersion>1.1.2.23</FileVersion>
-    <InformationalVersion>1.1.2-beta.1</InformationalVersion>
+    <Version>1.1.2</Version>
+    <AssemblyVersion>1.1.2.88</AssemblyVersion>
+    <FileVersion>1.1.2.88</FileVersion>
+    <InformationalVersion>1.1.2</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
