--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,10 +12,10 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.1.3</Version>
-    <AssemblyVersion>1.1.3.5</AssemblyVersion>
-    <FileVersion>1.1.3.5</FileVersion>
-    <InformationalVersion>1.1.3-beta.1</InformationalVersion>
+    <Version>1.1.4</Version>
+    <AssemblyVersion>1.1.4.1</AssemblyVersion>
+    <FileVersion>1.1.4.1</FileVersion>
+    <InformationalVersion>1.1.4</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
