feat: Beta version 1.2.0-beta.1 with modular UI navigation and remote config service /   发布1.2.0-beta.1测试版本，重构模块化UI导航与新增远程主配置服务
  - Split MainView into dedicated ModBrowserView, InstalledModsView, ModDetailView, and TranslationView for cleaner
  navigation / 将MainView拆分为独立的MOD浏览、已安装MOD、MOD详情与翻译视图，优化导航结构
  - Add MainConfigService with remote fetch, 1-hour cache, and built-in fallback URLs for centralized config management
  / 新增MainConfigService，支持远程拉取、1小时缓存与内置兜底地址，实现集中化配置管理
  - Introduce ModBrowserViewModel with tag-based chip filtering, search, and install/update actions /
  新增ModBrowserViewModel，支持Tag筛选、搜索与安装更新操作
  - Add ModDetailViewModel for per-mod detail page with dependency/conflict display and changelog /
  新增ModDetailViewModel，展示MOD详情、依赖冲突与更新日志
  - Add InstalledModsViewModel for managing installed mods with enable/disable/uninstall operations /
  新增InstalledModsViewModel，管理已安装MOD的启用、禁用与卸载
  - Remove UnifiedManifest model in favor of MainConfig-driven remote configuration /
  移除UnifiedManifest模型，改由MainConfigService驱动远程配置
  - Add DevMode model for developer-mode local config override / 新增DevMode模型，支持开发者模式本地配置覆盖
  - Expand localization strings for new views and navigation labels / 补充新视图与导航标签的本地化字符串
  - Bump version to 1.2.0-beta.1 with updated assembly metadata / 升级版本至1.2.0-beta.1并更新程序集元数据

--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,10 +12,10 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
     
     <!-- Version Information -->
-    <Version>1.1.4</Version>
-    <AssemblyVersion>1.1.4.1</AssemblyVersion>
-    <FileVersion>1.1.4.1</FileVersion>
-    <InformationalVersion>1.1.4</InformationalVersion>
+    <Version>1.2.0-beta.1</Version>
+    <AssemblyVersion>1.2.0.117</AssemblyVersion>
+    <FileVersion>1.2.0.117</FileVersion>
+    <InformationalVersion>1.2.0-beta.1</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
