feat: RC version 1.2.0-rc.1 with MelonLoader manifest, version cleanup service, and UI overlay refactor / 发布1.2.0-rc.1候选版本，新增MelonLoader文件清单、版本清理服务与UI遮罩重构 - Add MelonLoader file manifest to track installed files during installation, enabling precise uninstall without touching user data directories / 新增MelonLoader文件清单机制，安装时记录文件列表，卸载时精准删除，不影响用户数据目录 - Add VersionCleanupService to auto-remove obsolete files from previous versions on startup by comparing release ZIPs / 新增版本清理服务，启动时对比新旧版本ZIP自动删除遗留废弃文件 - Improve MelonLoader version detection to read from MelonLoader.dll FileVersion first, falling back to Latest.log / 优化MelonLoader版本检测，优先从DLL的FileVersion读取，兜底解析Latest.log - Add GetCurrentGameVersionAsync to read game version from Latest.log for compatibility display in MOD browser / 新增游戏版本读取接口，从Latest.log获取当前游戏版本用于MOD浏览器兼容性展示 - Replace MelonLoader-not-installed popup with non-blocking overlay with direct install navigation button / 将MelonLoader未安装弹窗替换为非阻断遮罩，提供直接跳转安装的按钮 - Refactor game-running overlay to cover content area only, keeping stop button accessible in status bar / 重构游戏运行遮罩，仅覆盖内容区域，保持状态栏停止按钮可点击 - Display supported game versions as colored badges in MOD browser — green for match, amber for mismatch / MOD浏览器支持版本兼容性彩色标签，匹配当前游戏版本显示绿色，不匹配显示黄色 - Refactor proxy server selection to SelectedProxyServer object binding in Settings and Setup Wizard / 设置页与安装向导代理服务器选择从枚举绑定重构为对象绑定 - Auto-refresh proxy server list from remote config when entering Step 2 of Setup Wizard / 进入安装向导第2步时自动从远程主配置拉取最新代理节点列表 - Show dependency dialog with MOD display names instead of raw mod IDs / 依赖缺失对话框改为显示MOD名称，不再显示原始ID - Reset version cleanup flag before self-update to trigger cleanup after next launch / 自动更新前重置版本清理标记，确保更新后下次启动触发清理 - Publish as single-file executable targeting win-x64 / 发布格式改为单文件可执行，目标平台win-x64 - Bump version to 1.2.0-rc.1 with updated assembly metadata / 升级版本至1.2.0-rc.1并更新程序集元数据

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
       run: dotnet build "GHPC Mod Manager.csproj" --configuration Release --no-restore
 
     - name: Publish application
-      run: dotnet publish "GHPC Mod Manager.csproj" --configuration Release --output ./publish --no-build --framework net8.0-windows
+      run: dotnet publish "GHPC Mod Manager.csproj" --configuration Release --output ./publish --no-build --framework net8.0-windows -r win-x64 --self-contained false -p:PublishSingleFile=true
 
     - name: Create release package
       shell: pwsh
