feat: Beta version 1.2.1-beta.1 with multi-level fallback for remote config endpoints / 发布1.2.1-beta.1测试版本，新增远程配置多级fallback机制 - Implement multi-level fallback strategy for main config, mod config, and mod i18n URLs with automatic failover across primary, fallback, fallback2, and GitHub Raw channels / 主配置、Mod配置、ModI18n配置新增多级fallback机制，自动在主渠道、备用渠道、备用2渠道、GitHub Raw之间切换 - Add ModConfigUrlFallback, ModConfigUrlFallback2, ModI18nUrlFallback, ModI18nUrlFallback2 fields to MainConfig datamodel for remote-controlled fallback endpoints / MainConfig数据模型新增备用URL字段，支持远程下发配置多级回退地址 - Add GetMainConfigUrlCandidates, GetModConfigUrlCandidates, GetModI18nUrlCandidates methods to return ordered candidate URL lists for failover logic / 新增候选URL列表接口，返回按优先级排序的可用地址供fallback逻辑使用 - Add 8-second timeout for main config requests to prevent long waits on unreachable endpoints / 主配置请求新增8秒超时，避免不可达节点长时间阻塞 - Improve network connectivity test to iterate through all main config candidates with HEAD-to-GET fallback for nodes that reject HEAD requests / 网络连通性测试改为遍历所有候选地址，HEAD请求失败时自动回退GET请求 - Localize main config service log messages with new resource strings for better i18n support / 主配置服务日志消息国际化，新增相关资源字符串 - Bump version to 1.2.1-beta.1 with updated assembly metadata / 升级版本至1.2.1-beta.1并更新程序集元数据

--- a/GHPC Mod Manager.csproj
+++ b/GHPC Mod Manager.csproj
@@ -12,12 +12,12 @@
     <ApplicationIcon>app.ico</ApplicationIcon>
 
 	  <!-- Version Information -->
-    <Version>1.2.0</Version>
+    <Version>1.2.1-beta.1</Version>
 	<!-- 1.2b -->
 	<AssemblyVersion>1.2.0.117</AssemblyVersion>
     <FileVersion>1.2.0.117</FileVersion>
 	<!-- 1.2b -->
-    <InformationalVersion>1.2.0</InformationalVersion>
+    <InformationalVersion>1.2.1-beta.1</InformationalVersion>
     <Product>GHPC Mod Manager</Product>
     <Description>A mod management tool for GHPC (Gunner, HEAT, PC!)</Description>
     <Copyright>Copyright © 2025</Copyright>
